--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 	<div class="card">
 		<div class="card-body">
 			<p>This repo is Brooke's main repository.</p>
-			<a class="btn btn-sm btn-primary" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://github.com/DaBrookePlayz/DaBrookePlayz.github.io/">Add to Cydia</a>
+			<a class="btn btn-sm btn-primary" href="cydia://url/https://cydia.saurik.com/api/share#?source=https://dabrookeplayz.github.io/">Add to Cydia</a>
 		</div>
 	</div>
 </div>
