--- a/compParts/index.html
+++ b/compParts/index.html
@@ -9,3 +9,4 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	</head>
+</html>
