--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
 	<head>
 		<title>Axolotl Company</title>
-		<link rel="images/favicon.ico">
+		<link rel="/images/favicon.ico">
     		<!-- <link href="https://fonts.googleapis.com/css?family=Raleway:900" rel="stylesheet"> -->
 		<link rel="stylesheet" type="text/css" href="template.css">
-		<script type="text/javascript" src="welcome.js"></script> -->
+		<script type="text/javascript" src="welcome.js"></script>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
