--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<title>Axolotl Company</title>
-		<link rel="icon" href="images/favicon.ico"/>
+		<link rel="icon" type="image/png" href="images/favicon.png"/>
     		<!-- <link href="https://fonts.googleapis.com/css?family=Raleway:900" rel="stylesheet"> -->
 		<link rel="stylesheet" type="text/css" href="template.css">
 		<script type="text/javascript" src="welcome.js"></script>
