--- a/index.html
+++ b/index.html
@@ -10,5 +10,17 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	</head>
-	 <img src="images/icon.png" alt="Axolotl Company icon"> 
+	<table> 
+		<tr>
+			<td><img src="images/icon.png" alt="Axolotl Company icon"></td>
+			<td>We at Axolotl Co. love computers and axolotls. This is a educational website to help the inexperienced learn more about computer parts and computer prices.</td>
+		</tr>
+	</table>
+	<button onclick="compParts()">Computer Parts</button>
+	<button onclick="partsQuiz()">Parts Quiz</button>
+	<button onclick="buyGuide()">Buying Guide</button>
+	<button onclick="contact()">About Us</button>
+	
+	<!-- Add the weird banner thing at the bottom -->
+	
 </html>
