--- a/index.html
+++ b/index.html
@@ -10,17 +10,48 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	</head>
+	
 	<table> 
 		<tr>
-			<td><img src="images/icon.png" alt="Axolotl Company icon"></td>
-			<td>We at Axolotl Co. love computers and axolotls. This is a educational website to help the inexperienced learn more about computer parts and computer prices.</td>
+			<td>
+				<img src="images/icon.png" alt="Axolotl Company icon">
+			</td>
+			<td>
+				We at Axolotl Co. love computers and axolotls. This is a educational website to help the inexperienced learn more about computer parts and computer prices.
+			</td>
 		</tr>
 	</table>
+	
 	<button onclick="compParts()">Computer Parts</button>
 	<button onclick="partsQuiz()">Parts Quiz</button>
 	<button onclick="buyGuide()">Buying Guide</button>
 	<button onclick="contact()">About Us</button>
 	
-	<!-- Add the weird banner thing at the bottom -->
-	
+	<div class = "bottomBanner">
+		<table>
+			<tr>
+				<td>
+					<a href="url">Contact Us</a>
+				</td><td>
+					<a href="url">Privacy Policy</a>
+				</td><td>
+					<a href="url">Terms of Use</a>
+				</td>
+			</tr>
+			<tr>
+				<td>
+					<a href="url">Homepage</a>
+				</td>
+				<td>
+					<a href="url">Computer Parts</a>
+				</td>
+				<td>
+					<a href="url">Parts Quiz</a>
+				</td>
+				<td>
+					<a href="url">Buying Guide</a>
+				</td>
+			</tr>
+		</table>
+	</div>
 </html>
