--- a/index.html
+++ b/index.html
@@ -28,29 +28,22 @@
 	<button onclick="contact()">About Us</button>
 	
 	<div class = "bottomBanner">
-		<table>
-			<tr>
-				<td>
-					<a href="url">Contact Us</a>
-				</td><td>
-					<a href="url">Privacy Policy</a>
-				</td><td>
-					<a href="url">Terms of Use</a>
-				</td>
+		<table> 
+			<tr> 
+				<td> <a href="url">Contact Us</a> </td>
+				<td> <a href="url">Homepage</a> </td>
 			</tr>
 			<tr>
-				<td>
-					<a href="url">Homepage</a>
-				</td>
-				<td>
-					<a href="url">Computer Parts</a>
-				</td>
-				<td>
-					<a href="url">Parts Quiz</a>
-				</td>
-				<td>
-					<a href="url">Buying Guide</a>
-				</td>
+				<td> <a href="url">Privacy Policy</a> </td>
+				<td> <a href="url">Computer Parts</a> </td>
+			</tr>
+			<tr>
+				<td> <a href="url">Terms of use</a> </td>
+				<td> <a href="url">Parts Quiz</a> </td>
+			</tr>
+			<tr>
+				<td> <a href="url">&nbsp</a> </td>
+				<td> <a href="url">Buying Guide</a> </td>
 			</tr>
 		</table>
 	</div>
