--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
 	<div class = "bottomBanner">
 		<table> 
 			<tr> 
-				<td> <a href="url">Contact Us</a> </td>
-				<td> <a href="url">Homepage</a> </td>
+				<td> <a href="https://dabrookeplayz.github.io/contact">Contact Us</a> </td>
+				<td> <a href="https://dabrookeplayz.github.io/">Homepage</a> </td>
 			</tr>
 			<tr>
-				<td> <a href="url">Privacy Policy</a> </td>
-				<td> <a href="url">Computer Parts</a> </td>
+				<td> <a href="https://dabrookeplayz.github.io/privacy">Privacy Policy</a> </td>
+				<td> <a href="https://dabrookeplayz.github.io/compParts">Computer Parts</a> </td>
 			</tr>
 			<tr>
-				<td> <a href="url">Terms of use</a> </td>
-				<td> <a href="url">Parts Quiz</a> </td>
+				<td> <a href="https://dabrookeplayz.github.io/terms">Terms of use</a> </td>
+				<td> <a href="https://dabrookeplayz.github.io/partsSuix">Parts Quiz</a> </td>
 			</tr>
 			<tr>
-				<td> <a href="url">&nbsp</a> </td>
-				<td> <a href="url">Buying Guide</a> </td>
+				<td> <p>&nbsp<p> </td>
+				<td> <a href="https://dabrookeplayz.github.io/buyGuide">Buying Guide</a> </td>
 			</tr>
 		</table>
 	</div>
