--- a/index.html
+++ b/index.html
@@ -10,41 +10,42 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	</head>
-	
-	<table> 
-		<tr>
-			<td>
-				<img src="images/icon.png" alt="Axolotl Company icon">
-			</td>
-			<td>
-				We at Axolotl Co. love computers and axolotls. This is a educational website to help the inexperienced learn more about computer parts and computer prices.
-			</td>
-		</tr>
-	</table>
-	
-	<button onclick="compParts()">Computer Parts</button>
-	<button onclick="partsQuiz()">Parts Quiz</button>
-	<button onclick="buyGuide()">Buying Guide</button>
-	<button onclick="contact()">About Us</button>
-	
-	<div class = "bottomBanner">
+	<body>
 		<table> 
-			<tr> 
-				<td> <a href="https://dabrookeplayz.github.io/contact">Contact Us</a> </td>
-				<td> <a href="https://dabrookeplayz.github.io/">Homepage</a> </td>
-			</tr>
 			<tr>
-				<td> <a href="https://dabrookeplayz.github.io/privacy">Privacy Policy</a> </td>
-				<td> <a href="https://dabrookeplayz.github.io/compParts">Computer Parts</a> </td>
-			</tr>
-			<tr>
-				<td> <a href="https://dabrookeplayz.github.io/terms">Terms of use</a> </td>
-				<td> <a href="https://dabrookeplayz.github.io/partsSuix">Parts Quiz</a> </td>
-			</tr>
-			<tr>
-				<td> <p>&nbsp<p> </td>
-				<td> <a href="https://dabrookeplayz.github.io/buyGuide">Buying Guide</a> </td>
+				<td>
+					<img src="images/icon.png" alt="Axolotl Company icon">
+				</td>
+				<td>
+					We at Axolotl Co. love computers and axolotls. This is a educational website to help the inexperienced learn more about computer parts and computer prices.
+				</td>
 			</tr>
 		</table>
-	</div>
+		
+		<button onclick="compParts()">Computer Parts</button>
+		<button onclick="partsQuiz()">Parts Quiz</button>
+		<button onclick="buyGuide()">Buying Guide</button>
+		<button onclick="contact()">About Us</button>
+		
+		<div class = "bottomBanner">
+			<table> 
+				<tr> 
+					<td> <a href="https://dabrookeplayz.github.io/contact">Contact Us</a> </td>
+					<td> <a href="https://dabrookeplayz.github.io/">Homepage</a> </td>
+				</tr>
+				<tr>
+					<td> <a href="https://dabrookeplayz.github.io/privacy">Privacy Policy</a> </td>
+					<td> <a href="https://dabrookeplayz.github.io/compParts">Computer Parts</a> </td>
+				</tr>
+				<tr>
+					<td> <a href="https://dabrookeplayz.github.io/terms">Terms of use</a> </td>
+					<td> <a href="https://dabrookeplayz.github.io/partsSuix">Parts Quiz</a> </td>
+				</tr>
+				<tr>
+					<td> <p>&nbsp<p> </td>
+					<td> <a href="https://dabrookeplayz.github.io/buyGuide">Buying Guide</a> </td>
+				</tr>
+			</table>
+		</div>
+	</body>
 </html>
