--- a/index.html
+++ b/index.html
@@ -39,10 +39,10 @@
 				</tr>
 				<tr>
 					<td> <a href="https://dabrookeplayz.github.io/terms">Terms of use</a> </td>
-					<td> <a href="https://dabrookeplayz.github.io/partsSuix">Parts Quiz</a> </td>
+					<td> <a href="https://dabrookeplayz.github.io/partsQuiz">Parts Quiz</a> </td>
 				</tr>
 				<tr>
-					<td> <p>&nbsp<p> </td>
+					<td> <p> </p> </td>
 					<td> <a href="https://dabrookeplayz.github.io/buyGuide">Buying Guide</a> </td>
 				</tr>
 			</table>
