--- a/index.html
+++ b/index.html
@@ -30,24 +30,7 @@
 		</div>
 		<p></p>
 		<div class = "bottomBanner">
-			<table> 
-				<tr> 
-					<td> <a href="https://dabrookeplayz.github.io/contact">Contact Us</a> </td>
-					<td> <a href="https://dabrookeplayz.github.io/">Homepage</a> </td>
-				</tr>
-				<tr>
-					<td> <a href="https://dabrookeplayz.github.io/privacy">Privacy Policy</a> </td>
-					<td> <a href="https://dabrookeplayz.github.io/compParts">Computer Parts</a> </td>
-				</tr>
-				<tr>
-					<td> <a href="https://dabrookeplayz.github.io/terms">Terms of use</a> </td>
-					<td> <a href="https://dabrookeplayz.github.io/partsQuiz">Parts Quiz</a> </td>
-				</tr>
-				<tr>
-					<td> <p></p> </td>
-					<td> <a href="https://dabrookeplayz.github.io/buyGuide">Buying Guide</a> </td>
-				</tr>
-			</table>
+			<a href="https://dabrookeplayz.github.io/contact">Contact Us</a> - <a href="https://dabrookeplayz.github.io/privacy">Privacy Policy</a> - <a href="https://dabrookeplayz.github.io/terms">Terms of Use</a> - <a href="https://dabrookeplayz.github.io/">Homepage</a>
 		</div>
 	</body>
 </html>
