--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 		</div>
 		<p></p>
 		<div class = "bottomBanner">
-			<a href="https://dabrookeplayz.github.io/contact">Contact Us</a> - <a href="https://dabrookeplayz.github.io/privacy">Privacy Policy</a> - <a href="https://dabrookeplayz.github.io/terms">Terms of Use</a> - <a href="https://dabrookeplayz.github.io/">Homepage</a>
+			<a href="https://dabrookeplayz.github.io/contact">Contact Us</a> &emsp;•&emsp; <a href="https://dabrookeplayz.github.io/privacy">Privacy Policy</a> &emsp;•&emsp; <a href="https://dabrookeplayz.github.io/terms">Terms of Use</a> &emsp;•&emsp; <a href="https://dabrookeplayz.github.io/">Homepage</a>
 		</div>
 	</body>
 </html>
