--- a/compParts/index.html
+++ b/compParts/index.html
@@ -2,11 +2,85 @@
 <html>
 	<head>
 		<title>Axolotl Company</title> <!--
-		<link href="https://fonts.googleapis.com/css?family=Raleway:900" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="title.css">
-		<script type="text/javascript" src="title.js"></script> -->
+		<link href="https://fonts.googleapis.com/css?family=Raleway:900" rel="stylesheet"> -->
+		<link rel="stylesheet" type="text/css" href="../template.css"> 
+		<script type="text/javascript" src="compParts.js"></script>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	</head>
+	<body>
+		<div class="main"> 
+			<table>
+				<tr>
+					<td>
+						1
+					</td>
+					<td>
+						2
+					</td>
+					<td>
+						3
+					</td>
+					<td>
+						4
+					</td>
+					<td>
+						5
+					</td>
+					<td>
+						6
+					</td>
+					<td>
+						7
+					</td>
+					<td>
+						8
+					</td>
+					<td>
+						9
+					</td>
+					<td>
+						0
+					</td>
+				</tr>
+				<tr>
+					<td>
+						1
+					</td>
+					<td>
+						2
+					</td>
+					<td>
+						3
+					</td>
+					<td>
+						4
+					</td>
+					<td>
+						5
+					</td>
+					<td>
+						6
+					</td>
+					<td>
+						7
+					</td>
+					<td>
+						8
+					</td>
+					<td>
+						9
+					</td>
+					<td>
+						0
+					</td>
+				</tr>
+			</table>
+		</div>
+		<p></p>
+		<div class = "bottomBanner">
+			<a href="https://dabrookeplayz.github.io/contact">Contact Us</a> <p>&emsp;•&emsp;</p> <a href="https://dabrookeplayz.github.io/privacy">Privacy Policy</a> <p>&emsp;•&emsp;</p> <a href="https://dabrookeplayz.github.io/terms">Terms of Use</a> <p>&emsp;•&emsp;</p> <a href="https://dabrookeplayz.github.io/">Homepage</a>
+		</div>
+	</body>
 </html>
