--- a/compParts/index.html
+++ b/compParts/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>Axolotl Company</title> <!--
 		<link href="https://fonts.googleapis.com/css?family=Raleway:900" rel="stylesheet"> -->
-		<link rel="stylesheet" type="text/css" href="../template.css"> 
+		<link rel="stylesheet" type="text/css" href="/template.css"> 
 		<script type="text/javascript" src="compParts.js"></script>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
