--- a/compParts/index.html
+++ b/compParts/index.html
@@ -1,12 +1,11 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Axolotl Company</title> <!--
-		<link href="https://fonts.googleapis.com/css?family=Raleway:900" rel="stylesheet"> -->
-		<link rel="stylesheet" type="text/css" href="/template.css"> 
+		<title>Axolotl Company</title> 
+		<link rel="icon" type="image/png" href="../images/favicon.png"/>
+		<link rel="stylesheet" type="text/css" href="../template.css"> 
 		<script type="text/javascript" src="compParts.js"></script>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	</head>
 	<body>
@@ -17,31 +16,7 @@
 						1
 					</td>
 					<td>
-						2
-					</td>
-					<td>
-						3
-					</td>
-					<td>
-						4
-					</td>
-					<td>
-						5
-					</td>
-					<td>
-						6
-					</td>
-					<td>
-						7
-					</td>
-					<td>
-						8
-					</td>
-					<td>
-						9
-					</td>
-					<td>
-						0
+						CPU
 					</td>
 				</tr>
 				<tr>
@@ -49,31 +24,71 @@
 						1
 					</td>
 					<td>
-						2
+						GPU
+					</td>
+				</tr>
+				<tr>
+					<td>
+						1
 					</td>
 					<td>
-						3
+						RAM
+					</td>
+				</tr>
+				<tr>
+					<td>
+						1
 					</td>
 					<td>
-						4
+						Drive
+					</td>
+				</tr>
+				<tr>
+					<td>
+						1
 					</td>
 					<td>
-						5
+						Motherboard
+					</td>
+				</tr>
+				<tr>
+					<td>
+						1
 					</td>
 					<td>
-						6
+						Power supply
+					</td>
+				</tr>
+				<tr>
+					<td>
+						1
 					</td>
 					<td>
-						7
+						Speakers
+					</td>
+				</tr>
+				<tr>
+					<td>
+						1
 					</td>
 					<td>
-						8
+						Physical ports
+					</td>
+				</tr>
+				<tr>
+					<td>
+						1
 					</td>
 					<td>
-						9
+						Cooling system
+					</td>
+				</tr>
+				<tr>
+					<td>
+						1
 					</td>
 					<td>
-						0
+						Expansion slots
 					</td>
 				</tr>
 			</table>
