--- a/compParts/index.html
+++ b/compParts/index.html
@@ -13,7 +13,17 @@
 			<table>
 				<tr>
 					<td>
-						1
+						<img src="../images/icon.png" alt="Axolotl Company icon">
+					</td>
+					<td>
+						<h1>Computer Parts</h1>
+					</td>
+				</tr>
+			</table>
+			<table>
+				<tr>
+					<td>
+						<img src="../images/cpu.jpg" alt="Central Processing Unit (CPU)">
 					</td>
 					<td>
 						CPU
@@ -21,7 +31,7 @@
 				</tr>
 				<tr>
 					<td>
-						1
+						<img src="../images/gpu.jpg" alt="Graphical Processing Unit (GPU)">
 					</td>
 					<td>
 						GPU
@@ -29,7 +39,7 @@
 				</tr>
 				<tr>
 					<td>
-						1
+						<img src="../images/ram.jpg" alt="Random Access Memory (RAM)">
 					</td>
 					<td>
 						RAM
@@ -37,7 +47,7 @@
 				</tr>
 				<tr>
 					<td>
-						1
+						<img src="../images/drive.jpg" alt="Hard Disk Drive (HDD) and Solid State Drive (SSD)">
 					</td>
 					<td>
 						Drive
@@ -45,7 +55,7 @@
 				</tr>
 				<tr>
 					<td>
-						1
+						<img src="../images/motherboard.png" alt="Motherboard">
 					</td>
 					<td>
 						Motherboard
@@ -53,7 +63,7 @@
 				</tr>
 				<tr>
 					<td>
-						1
+						<img src="../images/power.jpg" alt="Internal power supply">
 					</td>
 					<td>
 						Power supply
@@ -61,7 +71,7 @@
 				</tr>
 				<tr>
 					<td>
-						1
+						<img src="../images/speaker.png" alt="Computer speaker">
 					</td>
 					<td>
 						Speakers
@@ -69,7 +79,7 @@
 				</tr>
 				<tr>
 					<td>
-						1
+						<img src="../images/ports.jpg" alt="Physical ports on a motherboard">
 					</td>
 					<td>
 						Physical ports
@@ -77,7 +87,7 @@
 				</tr>
 				<tr>
 					<td>
-						1
+						<img src="../images/fan.jpeg" alt="Internal computer fan">
 					</td>
 					<td>
 						Cooling system
@@ -85,7 +95,7 @@
 				</tr>
 				<tr>
 					<td>
-						1
+						<img src="../images/slots.jpg" alt="Expansion slots on a motherboard">
 					</td>
 					<td>
 						Expansion slots
