--- a/compParts/index.html
+++ b/compParts/index.html
@@ -11,6 +11,10 @@
 	<body>
 		<div class="main"> 
 			<table>
+				<colgroup>
+					<col width="33%" />
+					<col width="67%" />
+				</colgroup>
 				<tr>
 					<td>
 						<img src="../images/icon.png" alt="Axolotl Company icon">
