--- a/compParts/index.html
+++ b/compParts/index.html
@@ -17,7 +17,7 @@
 				</colgroup>
 				<tr>
 					<td>
-						<img src="../images/icon.png" alt="Axolotl Company icon">
+						<img src="../images/icon.png" alt="Axolotl Company icon" onclick="welcome()">
 					</td>
 					<td>
 						<h1>Computer Parts</h1>
@@ -34,7 +34,8 @@
 						<img src="../images/cpu.jpg" alt="Central Processing Unit (CPU)">
 					</td>
 					<td>
-						CPU
+						<h2>Central Processing Unit (CPU)</h2>
+						<p>h</p>
 					</td>
 				</tr>
 				<tr>
@@ -42,7 +43,8 @@
 						<img src="../images/gpu.jpg" alt="Graphical Processing Unit (GPU)">
 					</td>
 					<td>
-						GPU
+						<h2>Graphical Processing Unit (GPU)</h2>
+						<p>h</p>
 					</td>
 				</tr>
 				<tr>
@@ -50,7 +52,8 @@
 						<img src="../images/ram.jpg" alt="Random Access Memory (RAM)">
 					</td>
 					<td>
-						RAM
+						<h2>Random Access Memory (RAM)</h2>
+						<p>h</p>
 					</td>
 				</tr>
 				<tr>
@@ -58,7 +61,8 @@
 						<img src="../images/drive.jpg" alt="Hard Disk Drive (HDD) and Solid State Drive (SSD)">
 					</td>
 					<td>
-						Drive
+						<h2>Physical Drives</h2>
+						<p>h</p>
 					</td>
 				</tr>
 				<tr>
@@ -66,7 +70,8 @@
 						<img src="../images/motherboard.png" alt="Motherboard">
 					</td>
 					<td>
-						Motherboard
+						<h2>Motherboard</h2>
+						<p>h</p>
 					</td>
 				</tr>
 				<tr>
@@ -74,7 +79,8 @@
 						<img src="../images/power.jpg" alt="Internal power supply">
 					</td>
 					<td>
-						Power supply
+						<h2>Power Supply</h2>
+						<p>h</p>
 					</td>
 				</tr>
 				<tr>
@@ -82,7 +88,8 @@
 						<img src="../images/speaker.png" alt="Computer speaker">
 					</td>
 					<td>
-						Speakers
+						<h2>Speakers</h2>
+						<p>h</p>
 					</td>
 				</tr>
 				<tr>
@@ -90,7 +97,8 @@
 						<img src="../images/ports.jpg" alt="Physical ports on a motherboard">
 					</td>
 					<td>
-						Physical ports
+						<h2>Physical Ports</h2>
+						<p>h</p>
 					</td>
 				</tr>
 				<tr>
@@ -98,7 +106,8 @@
 						<img src="../images/fan.jpeg" alt="Internal computer fan">
 					</td>
 					<td>
-						Cooling system
+						<h2>Cooling Systems</h2>
+						<p>h</p>
 					</td>
 				</tr>
 				<tr>
@@ -106,7 +115,8 @@
 						<img src="../images/slots.jpg" alt="Expansion slots on a motherboard">
 					</td>
 					<td>
-						Expansion slots
+						<h2>Expansion slots</h2>
+						<p>h</p>
 					</td>
 				</tr>
 			</table>
