--- a/compParts/index.html
+++ b/compParts/index.html
@@ -17,7 +17,7 @@
 				</colgroup>
 				<tr>
 					<td>
-						<img src="../images/icon.png" alt="Axolotl Company icon" onclick="welcome()">
+						<img src="../images/icon.png" alt="Axolotl Company icon" onclick="welcome()" style = "cursor:pointer">
 					</td>
 					<td>
 						<h1>Computer Parts</h1>
@@ -35,7 +35,7 @@
 					</td>
 					<td>
 						<h2>Central Processing Unit (CPU)</h2>
-						<p>h</p>
+						<p>One of the most important components of any computer, which acts as its control center or brain. The CPU is a complex amalgamation of miniscule circuitry that runs the computer's operating system and applications that are stored on a physical drive. The CPU interprets, processes and executes instructions that are given from the computers' other components. It performs logical, arithmetical and other operations to process data input and outputs information to give to other parts of the computer. Modern CPUs tend to contain more than one core, so information can be process more than one sequence of instructions at a time. These instructions are given to the CPU in machine code, which is a collections of 1s and 0s, and nearly impossible for a human to interpret. </p> <a href="https://www.arm.com/glossary/cpu">More information</a>  
 					</td>
 				</tr>
 				<tr>
