--- a/compParts/index.html
+++ b/compParts/index.html
@@ -35,16 +35,18 @@
 					</td>
 					<td>
 						<h2>Central Processing Unit (CPU)</h2>
-						<p>One of the most important components of any computer, which acts as its control center or brain. The CPU is a complex amalgamation of miniscule circuitry that runs the computer's operating system and applications that are stored on a physical drive. The CPU interprets, processes and executes instructions that are given from the computers' other components. It performs logical, arithmetical and other operations to process data input and outputs information to give to other parts of the computer. Modern CPUs tend to contain more than one core, so information can be process more than one sequence of instructions at a time. These instructions are given to the CPU in machine code, which is a collections of 1s and 0s, and nearly impossible for a human to interpret. </p> <a href="https://www.arm.com/glossary/cpu">More information</a>  
+						<p>The CPU is one of the most important components of any computer, which acts as its control center or brain. The CPU is a complex amalgamation of miniscule circuitry that runs the computer's operating system and applications that are stored on a physical drive. The CPU interprets, processes and executes instructions that are given from the computers' other components. It performs logical, arithmetical and other operations to process data input and outputs information to give to other parts of the computer. Modern CPUs tend to contain more than one core, so information can be process more than one sequence of instructions at a time. These instructions are given to the CPU in machine code, which is a collections of 1s and 0s, and nearly impossible for a human to interpret.</p> 
+						<a href="https://www.arm.com/glossary/cpu">More information</a>  
 					</td>
 				</tr>
 				<tr>
 					<td>
-						<img src="../images/gpu.jpg" alt="Graphical Processing Unit (GPU)">
+						<img src="../images/gpu.jpg" alt="Graphics Processing Unit (GPU)">
 					</td>
 					<td>
-						<h2>Graphical Processing Unit (GPU)</h2>
-						<p>h</p>
+						<h2>Graphics Processing Unit (GPU)</h2>
+						<p>The GPU in a device is similar to a CPU in several ways, but handles more photo and video rendering, which makes them well-suited for use in creative productions and gaming. The reason why this is seperate from the CPU is due to how graphics tend to take up more resources than mathematical calculations, so the processing of those instructions should be handled by something that is more capable of handling such tasks. The GPU in a computer can either be integrated into the GPU chip itself, which is common in laptops and pre-built PCs, while discrete GPUs are a standalone component that can handle much more load, but at a cost of money, size, and heat production.</p>
+						<a href="https://www.intel.com/content/www/us/en/products/docs/processors/what-is-a-gpu.html">More information</a> 
 					</td>
 				</tr>
 				<tr>
@@ -53,7 +55,8 @@
 					</td>
 					<td>
 						<h2>Random Access Memory (RAM)</h2>
-						<p>h</p>
+						<p>RAM is a type of computer memory that stores data and instructions while a computer is running, and is flushed (or deleted) once the computer is shut down. The "random access" in its name is due to how a device can access RAM so quickly. It needs to be quick too, as it is the middle man or a large cache between the physical drive and the CPU; if your RAM is slow, your CPU will also have its speed impacted. While physical drives do not need a constant source of charge to store memory, RAM must have a source of power, or else the data will degrade. They also have a costly price, due to their read and write speeds.</p>
+						<a href="https://www.geeksforgeeks.org/random-access-memory-ram/">More information</a> 
 					</td>
 				</tr>
 				<tr>
