--- a/compParts/index.html
+++ b/compParts/index.html
@@ -66,6 +66,7 @@
 					<td>
 						<h2>Physical Drives</h2>
 						<p>Physical drives store data in 1s and 0s, hosting the operating system, applications, and your data, even when the computer is turned off. The two most common types of physical drives are Hard Disk Drives (HDD) and Solid State Drives (SSD). Hard disk drives tend to have much more storage, but are also much cheaper, older, larger, slower, and prone to failures than SSDs. With mechanical parts, HDDs are quite sensitive to sudden movement, magnets, and wear. SSDs are almost the opposite of HDDs in terms of features; they tend to have less storage and are more expensive, but they also are newer, smaller, faster, and have no moving parts, which makes it unlikely to lose data. HDDs in the modern age tend to be used for low-end devices and backups, while SSDs are for the more high-end and newer devices.</p>
+						<a href="https://www.hp.com/us-en/shop/tech-takes/ssd-vs-hdd">More information</a> 
 					</td>
 				</tr>
 				<tr>
@@ -74,7 +75,8 @@
 					</td>
 					<td>
 						<h2>Motherboard</h2>
-						<p>h</p>
+						<p>The motherboard is the primary circuit board in a computer, usually harboring the CPU, GPU, RAM, expansion slots, physical ports, BIOS, CMOS, and more. It makes it easy for each of these components to talk to one another, and allows for easy switching of parts on a buildable computer.</p>
+						<a href="https://www.lenovo.com/us/en/glossary/what-does-a-motherboard-do/">More information</a> 
 					</td>
 				</tr>
 				<tr>
