--- a/terms/index.html
+++ b/terms/index.html
@@ -24,7 +24,23 @@
 					</td>
 				</tr>
 			</table>
-
+			<p>Effective Date: November 30, 2024</p>
+			<p>Welcome to NebulaTech Innovations ("we," "our," "us"), your go-to platform for advanced technological solutions and services. By accessing or using our website (collectively, the "Services"), you agree to comply with and be bound by these Terms of Use ("Terms"). Please read them carefully before proceeding. </p>
+		<p>1. Acceptance of Terms: By accessing or using the Services, you confirm that you have read, understood, and agree to be legally bound by these Terms and our Privacy Policy. If you do not agree to these Terms, do not access or use our Services.</p>
+		<p>2. Eligibility: You must be at least 18 years old or the legal age of majority in your jurisdiction to use our Services. By using the Services, you represent and warrant that you are eligible to do so. </p>
+		<p>3. License to Use Our Services: Subject to these Terms, NebulaTech grants you a limited, non-exclusive, non-transferable license to access and use the Services for personal or business purposes. You may not sublicense, transfer, or assign this license to any third party without our prior written consent.</p>
+		<p>4. Restrictions on Use You agree not to:
+		&emsp;- Use the Services for any unlawful, harmful, or fraudulent purpose.
+		&emsp;- Distribute, sell, or lease any part of the Services without explicit written permission.
+		&emsp;- Reverse-engineer, decompile, or otherwise attempt to extract the source code of the Services.
+		&emsp;- Use the Services to transmit viruses, malware, or other harmful code.
+		&emsp;- Interfere with the proper functioning of the Services, including by hacking or exploiting vulnerabilities.</p>
+		<p>5. Third-Party Links and Content: Our Services may contain links to third-party websites, advertisements, or services that are not owned or controlled by NebulaTech. We do not endorse or assume any responsibility for any third-party sites, content, or services. You acknowledge and agree that NebulaTech is not responsible for any damages or losses resulting from your use of such third-party resources.</p>
+		<p>6. Termination: NebulaTech reserves the right to suspend or terminate your access to the Services at any time, for any reason, without notice. If you violate these Terms, your access may be revoked immediately. Upon termination, your right to use the Services will end, but any obligations or liabilities you have incurred will survive the termination.</p>
+		<p>7. Disclaimers and Limitation of Liability: The Services are provided "as is" without any warranties, express or implied. NebulaTech makes no warranties regarding the accuracy, reliability, or availability of the Services. In no event will NebulaTech be liable for any indirect, incidental, special, or consequential damages arising from your use or inability to use the Services, even if we have been advised of the possibility of such damages.</p>
+		<p>8. Indemnification: You agree to indemnify, defend, and hold harmless NebulaTech and its affiliates, officers, employees, and agents from any claims, damages, liabilities, and expenses (including legal fees) arising out of your use of the Services, violation of these Terms, or violation of any third-party rights.</p>
+		<p>9. Changes to Terms: We may update or modify these Terms at any time. When we do, we will post the revised version on this page and update the "Effective Date" at the top. Your continued use of the Services after such changes will constitute your acceptance of the new Terms.</p>
+		<p>10. Governing Law and Dispute Resolution These Terms are governed by the laws of the jurisdiction in which NebulaTech is based, without regard to its conflict of law principles. Any disputes related to these Terms will be resolved through binding arbitration, rather than in court, in accordance with the rules of the American Arbitration Association (AAA)</p>
 		</div>
 		<p></p>
 		<div class = "bottomBanner">
