--- a/partsQuiz/index.html
+++ b/partsQuiz/index.html
@@ -1,12 +1,34 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Axolotl Company</title> <!--
-		<link href="https://fonts.googleapis.com/css?family=Raleway:900" rel="stylesheet">
-		<link rel="stylesheet" type="text/css" href="title.css">
-		<script type="text/javascript" src="title.js"></script> -->
+		<title>Axolotl Company</title> 
+		<link rel="icon" type="image/png" href="../images/favicon.png"/>
+		<link rel="stylesheet" type="text/css" href="../template.css"> 
+		<script type="text/javascript" src="compParts.js"></script>
 		<meta charset="UTF-8">
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	</head>
+	<body>
+		<div class="main"> 
+			<table>
+				<colgroup>
+					<col width="33%" />
+					<col width="67%" />
+				</colgroup>
+				<tr>
+					<td>
+						<img src="../images/icon.png" alt="Axolotl Company icon" onclick="welcome()" style = "cursor:pointer">
+					</td>
+					<td>
+						<h1>Computer Parts Quiz</h1>
+					</td>
+				</tr>
+			</table>
+			<p>lorem ipsum</p>
+		</div>
+		<p></p>
+		<div class = "bottomBanner">
+			<a href="https://dabrookeplayz.github.io/contact">Contact Us</a> <p>&emsp;•&emsp;</p> <a href="https://dabrookeplayz.github.io/privacy">Privacy Policy</a> <p>&emsp;•&emsp;</p> <a href="https://dabrookeplayz.github.io/terms">Terms of Use</a>
+		</div>
+	</body>
 </html>
