--- a/privacy/index.html
+++ b/privacy/index.html
@@ -28,12 +28,12 @@
 			<p>At Axolotl Company, we value your privacy and are committed to protecting your personal information. This Privacy Policy outlines the types of personal data we collect, how we use it, and the measures we take to ensure it is handled securely.</p>
 <h2>1. Information We Collect</h2>
 <p>We collect various types of information to provide and improve our services, including:</p>
-<b>1.1 Usage Data</b>
+<p><b>1.1 Usage Data</b></p>
 <p>We may collect information about how you use our services, such as:
 <br>&emsp;- Your IP address, browser type, and operating system.
 <br>&emsp;- Pages you visit on our website and your interactions with our services.
 <br>&emsp;- Location data when you use our mobile app (with your consent).</p>
-<b>1.2 Cookies and Tracking Technologies</b>
+<p><b>1.2 Cookies and Tracking Technologies</b></p>
 <p>We use cookies, web beacons, and similar technologies to enhance user experience, analyze website usage, and offer personalized content. You can manage cookie preferences through your browser settings.</p>
 <h2>2. How We Use Your Information</h2>
 <p>We use the information we collect for the following purposes:
@@ -42,20 +42,20 @@
 <br>&emsp;- To Follow Grading: To be a bit silly as this project should have lasted two (2) weeks.</p>
 <h2>3. How We Protect Your Information</h2>
 <p>Axolotl Company takes reasonable precautions to safeguard your personal data, including:
-<br>emsp;- Regularly auditing our systems for vulnerabilities.
-<br>While we strive to protect your information, please note that no method of data transmission over the internet is 100% secure. Therefore, we cannot guarantee absolute security.</p>
+<br>&emsp;- Regularly auditing our systems for vulnerabilities.</p>
+<p>While we strive to protect your information, please note that no method of data transmission over the internet is 100% secure. Therefore, we cannot guarantee absolute security.</p>
 <h2>4. Sharing Your Information</h2>
 <p>We may share your personal data with third parties under the following circumstances:
 <br>&emsp;- Service Providers: We share your information with trusted third-party providers who help us run our business, such as payment processors, hosting services, and customer support.
 <br>&emsp;- Legal Compliance: We may disclose your information if required by law, such as in response to a subpoena or other legal process.
-<br>&emsp;- Business Transfers: In the event of a merger, acquisition, or asset sale, your personal information may be transferred.
-<br>We do not sell or rent your personal information to third parties for marketing purposes.</p>
+<br>&emsp;- Business Transfers: In the event of a merger, acquisition, or asset sale, your personal information may be transferred.</p>
+<p>We do not sell or rent your personal information to third parties for marketing purposes.</p>
 <h2>5. Data Retention</h2>
 <p>We retain your personal data only for as long as necessary to fulfill the purposes for which it was collected or as required by law. When your data is no longer needed, we will securely delete or anonymize it.</p>
 <h2>6. Your Rights and Choices</h2>
 <p>Depending on your location, you may have the following rights:
-<br>&emsp;- Cookies: You can manage your cookie preferences through your browser settings.
-<br>To exercise any of these rights, please contact us.</p>
+<br>&emsp;- Cookies: You can manage your cookie preferences through your browser settings.</p>
+<p>To exercise any of these rights, please contact us.</p>
 <h2>7. Children’s Privacy</h2>
 <p>Axolotl Company does not knowingly collect personal information from children under the age of 13. If we learn that we have inadvertently collected personal data from a child under the age of 13, we will promptly delete that information. If you are a parent or guardian and believe your child has provided us with personal information, please contact us immediately.</p>
 <h2>8. Changes to This Privacy Policy</h2>
