--- a/partsQuiz/index.html
+++ b/partsQuiz/index.html
@@ -4,7 +4,7 @@
 		<title>Axolotl Company</title> 
 		<link rel="icon" type="image/png" href="../images/favicon.png"/>
 		<link rel="stylesheet" type="text/css" href="../template.css"> 
-		<script type="text/javascript" src="compParts.js"></script>
+		<script type="text/javascript" src="partsQuiz.js"></script>
 		<meta charset="UTF-8">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	</head>
