--- a/contact/index.html
+++ b/contact/index.html
@@ -24,7 +24,15 @@
 					</td>
 				</tr>
 			</table>
-			<p>lorem ipsum</p>
+			<p>At Axolotl Company, we're here to help! Whether you have questions about our products, services, or just want to say hi, feel free to reach out. Below, you'll find all the ways to contact us.</p>
+			<p>For support-related questions:
+			<br>support@axolotlcompany.com</p>
+			<p>Customer Support: 1 800-555-AXOL (2965)
+			Available Monday to Friday, 9:00 AM to 5:00 PM (CST).</p>
+			<p>Axolotl Company Headquarters
+			<br>420 Downtown Ave.
+			<br>Denver, CO 80216
+			<br>United States</p>
 		</div>
 		<p></p>
 		<div class = "bottomBanner">
