--- a/contact/index.html
+++ b/contact/index.html
@@ -28,7 +28,7 @@
 			<p>For support-related questions:
 			<br>support@axolotlcompany.com</p>
 			<p>Customer Support: 1 800-555-AXOL (2965)
-			Available Monday to Friday, 9:00 AM to 5:00 PM (CST).</p>
+			<br>Available Monday to Friday, 9:00AM to 5:00PM CST.</p>
 			<p>Axolotl Company Headquarters
 			<br>420 Downtown Ave.
 			<br>Denver, CO 80216
