--- a/compParts/index.html
+++ b/compParts/index.html
@@ -85,7 +85,8 @@
 					</td>
 					<td>
 						<h2>Power Supply</h2>
-						<p>h</p>
+						<p>To recap, alternating high voltage current (AC) is primarily used in carrying electricity from power lines to your home, while most of your home electronics use direct current (DC) for efficiency. Those electronics need to carry a converter, or a power supply, to convert AC to usable DC. A power supply (PSU) converts the AC into DC, and they also regulate the DC output voltage to the specific tolerances required for computing components. The power supply tends to be inside the tower if the computer is a PC, while laptops have an external power supply connected to the charger.</p>
+						<a href="https://www.techbuyer.com/uk/blog/What-is-a-Power-Supply-Unit-PSU">More information</a>
 					</td>
 				</tr>
 				<tr>
@@ -94,7 +95,8 @@
 					</td>
 					<td>
 						<h2>Speakers</h2>
-						<p>h</p>
+						<p>Digital speakers translate electrical signals into audible sound, which can either be integrated into a computer or plugged into the computer. An internal speaker is an integrated audio output device within a computer, responsible for producing sounds for feedback or entertainment. Integerated speakers come standard with laptops and usually older PCs, while modern PCs may not have one, so the user has more "freedom" to use another audio output for better results.</p>
+						<a href="https://www.lenovo.com/us/en/glossary/internal-speaker/">More information</a>
 					</td>
 				</tr>
 				<tr>
@@ -103,7 +105,8 @@
 					</td>
 					<td>
 						<h2>Physical Ports</h2>
-						<p>h</p>
+						<p>Physical ports are physical connectors on a computer to connect input and / or output devices, like a keyboard, mouse, monitor, external drive, headphones, printer, or speaker. Historically, there were tons of different connectors for specific adapters due to lack of compatability. Some outdated ports included serial ports, PS/2 ports, parallel ports, modems, firewire, composite audio / video, component video, display connectors, and much more. Some more common adapters that are starting to being phased out are HDMI, mini-USB, micro-USB, and VGA. Nowadays, all someone really has to deal with on modern computers is USB 2.0, USB-C, the audio jack, and ethernet. </p>
+						<a href="https://recompute.co.zw/buying-guides/a-complete-guide-of-every-type-of-computer-port/">More information</a>
 					</td>
 				</tr>
 				<tr>
@@ -112,7 +115,8 @@
 					</td>
 					<td>
 						<h2>Cooling Systems</h2>
-						<p>h</p>
+						<p>Cooling systems are meant to cool your computer and ensure that it doesn't overheat. Fans are the most common type of cooling system in any computer, where it uses energy to push hot air out of the device. Fans usually work in tandem with heatsinks, which are connected to heat-creating components such as the CPU. These are metal plates that have several fins extending away from the component, absorbing heat from the component to make sure it doesn't overheat. Finally, liquid cooling is one of the most efficient (and most convoluted) ways to cool a system, and usually involves distilled water flowing through pipes inside the PC.</p>
+						<a href="https://www.coolerguys.com/blogs/news/what-are-the-types-of-cooling-system-in-computer">More information</a>
 					</td>
 				</tr>
 				<tr>
