--- a/compParts/index.html
+++ b/compParts/index.html
@@ -125,7 +125,8 @@
 					</td>
 					<td>
 						<h2>Expansion slots</h2>
-						<p>h</p>
+						<p>An expansion slot on a computer, which is a slot on the motherboard, allows one to add extra components to a device. This can expand the capabilities of a system. or add new functionality to it. Come common types of expansion slots include PCI, PCIe, AGP, and ISA, which can allow for installation of sound cards, network cards, graphics cards, and other interface cards.</p>
+						<a href="https://www.lenovo.com/us/en/glossary/expansion-slot/">More information</a>
 					</td>
 				</tr>
 			</table>
