--- a/partsQuiz/index.html
+++ b/partsQuiz/index.html
@@ -24,7 +24,15 @@
 					</td>
 				</tr>
 			</table>
-			<p>lorem ipsum</p>
+			<p>What is NOT an example of a physical port?</p>
+			<input type="radio" id="question1answer1" name="question1" value="idk">
+  			<label for="question1answer1">Micro-USB</label><br>
+			<input type="radio" id="question1answer2" name="question2" value="idk">
+  			<label for="question1answer2">VGA</label><br>
+			<input type="radio" id="question1answer3" name="question3" value="idk">
+  			<label for="question1answer3">CD Drive</label><br>
+			<input type="radio" id="question1answer4" name="question4" value="idk">
+  			<label for="question1answer4">Audio-jack</label><br>
 		</div>
 		<p></p>
 		<div class = "bottomBanner">
