--- a/partsQuiz/index.html
+++ b/partsQuiz/index.html
@@ -33,6 +33,49 @@
   			<label for="question1answer3">CD Drive</label><br>
 			<input type="radio" id="question1answer4" name="question1">
   			<label for="question1answer4">Audio-jack</label><br>
+
+			<p>What is the correct acronym for RAM?</p>
+			<input type="radio" id="question2answer1" name="question2">
+  			<label for="question2answer1">Solid Static Drive</label><br>
+			<input type="radio" id="question2answer2" name="question2">
+  			<label for="question2answer2">Solid State Disk</label><br>
+			<input type="radio" id="question2answer3" name="question2">
+  			<label for="question2answer3">Solid Static Disk</label><br>
+			<input type="radio" id="question2answer4" name="question2">
+  			<label for="question2answer4">Solid State Drive</label><br>
+
+			<p>How is a GPU different from a CPU?</p>
+			<input type="radio" id="question3answer1" name="question3">
+  			<label for="question3answer1">GPU handles more graphics than a CPU.</label><br>
+			<input type="radio" id="question3answer2" name="question3">
+  			<label for="question3answer2">GPU is better at graphing than a CPU.</label><br>
+			<input type="radio" id="question3answer3" name="question3">
+  			<label for="question3answer3">GPU processes information faster than a CPU.</label><br>
+			<input type="radio" id="question3answer4" name="question3">
+  			<label for="question3answer4">GPU is a backup option for a CPU to use.</label><br>
+
+			<p>What does RAM do in a computer?</p>
+			<input type="radio" id="question4answer1" name="question4">
+  			<label for="question4answer1">It regulates the power supply's input.</label><br>
+			<input type="radio" id="question4answer2" name="question4">
+  			<label for="question4answer2">It holds temporary memory to give the CPU later.</label><br>
+			<input type="radio" id="question4answer3" name="question4">
+  			<label for="question4answer3">It acts as a backup storage for the drive.</label><br>
+			<input type="radio" id="question4answer4" name="question4">
+  			<label for="question4answer4">It processes data to give to the user.</label><br>
+
+			<p>Where are the expansion slots located on a PC?</p>
+			<input type="radio" id="question1answer1" name="question1">
+  			<label for="question1answer1">CPU</label><br>
+			<input type="radio" id="question1answer2" name="question1">
+  			<label for="question1answer2">Monitor</label><br>
+			<input type="radio" id="question1answer3" name="question1">
+  			<label for="question1answer3">Motherboard</label><br>
+			<input type="radio" id="question1answer4" name="question1">
+  			<label for="question1answer4">Physical Drive</label><br>
+
+			<button onclick="process()">Check Answers</button>
+			<button onclick="reset()">Clear Answers</button>
 		</div>
 		<p></p>
 		<div class = "bottomBanner">
