--- a/partsQuiz/index.html
+++ b/partsQuiz/index.html
@@ -34,7 +34,7 @@
 			<input type="radio" id="question1answer4" name="question1">
   			<label for="question1answer4">Audio-jack</label><br>
 
-			<p>What is the correct acronym for RAM?</p>
+			<p>What is the correct acronym for SSD?</p>
 			<input type="radio" id="question2answer1" name="question2">
   			<label for="question2answer1">Solid Static Drive</label><br>
 			<input type="radio" id="question2answer2" name="question2">
@@ -65,14 +65,16 @@
   			<label for="question4answer4">It processes data to give to the user.</label><br>
 
 			<p>Where are the expansion slots located on a PC?</p>
-			<input type="radio" id="question1answer1" name="question1">
-  			<label for="question1answer1">CPU</label><br>
-			<input type="radio" id="question1answer2" name="question1">
-  			<label for="question1answer2">Monitor</label><br>
-			<input type="radio" id="question1answer3" name="question1">
-  			<label for="question1answer3">Motherboard</label><br>
-			<input type="radio" id="question1answer4" name="question1">
-  			<label for="question1answer4">Physical Drive</label><br>
+			<input type="radio" id="question5answer1" name="question5">
+  			<label for="question5answer1">CPU</label><br>
+			<input type="radio" id="question5answer2" name="question5">
+  			<label for="question5answer2">Monitor</label><br>
+			<input type="radio" id="question5answer3" name="question5">
+  			<label for="question5answer3">Motherboard</label><br>
+			<input type="radio" id="question5answer4" name="question5">
+  			<label for="question5answer4">Physical Drive</label><br>
+
+			<p id=feedback></p>
 
 			<button onclick="process()">Check Answers</button>
 			<button onclick="reset()">Clear Answers</button>
