--- a/partsQuiz/index.html
+++ b/partsQuiz/index.html
@@ -24,7 +24,7 @@
 					</td>
 				</tr>
 			</table>
-			<p>What is NOT an example of a physical port?</p>
+			<h2>What is NOT an example of a physical port?</h2>
 			<input type="radio" id="question1answer1" name="question1">
   			<label for="question1answer1">Micro-USB</label><br>
 			<input type="radio" id="question1answer2" name="question1">
@@ -33,8 +33,8 @@
   			<label for="question1answer3">CD Drive</label><br>
 			<input type="radio" id="question1answer4" name="question1">
   			<label for="question1answer4">Audio-jack</label><br>
-
-			<p>What is the correct acronym for SSD?</p>
+			<br>
+			<h2>What is the correct acronym for SSD?</h2>
 			<input type="radio" id="question2answer1" name="question2">
   			<label for="question2answer1">Solid Static Drive</label><br>
 			<input type="radio" id="question2answer2" name="question2">
@@ -43,8 +43,8 @@
   			<label for="question2answer3">Solid Static Disk</label><br>
 			<input type="radio" id="question2answer4" name="question2">
   			<label for="question2answer4">Solid State Drive</label><br>
-
-			<p>How is a GPU different from a CPU?</p>
+			<br>
+			<h2>How is a GPU different from a CPU?</h2>
 			<input type="radio" id="question3answer1" name="question3">
   			<label for="question3answer1">GPU handles more graphics than a CPU.</label><br>
 			<input type="radio" id="question3answer2" name="question3">
@@ -53,8 +53,8 @@
   			<label for="question3answer3">GPU processes information faster than a CPU.</label><br>
 			<input type="radio" id="question3answer4" name="question3">
   			<label for="question3answer4">GPU is a backup option for a CPU to use.</label><br>
-
-			<p>What does RAM do in a computer?</p>
+			<br>
+			<h2>What does RAM do in a computer?</h2>
 			<input type="radio" id="question4answer1" name="question4">
   			<label for="question4answer1">It regulates the power supply's input.</label><br>
 			<input type="radio" id="question4answer2" name="question4">
@@ -63,8 +63,8 @@
   			<label for="question4answer3">It acts as a backup storage for the drive.</label><br>
 			<input type="radio" id="question4answer4" name="question4">
   			<label for="question4answer4">It processes data to give to the user.</label><br>
-
-			<p>Where are the expansion slots located on a PC?</p>
+			<br>
+			<h2>Where are the expansion slots located on a PC?</h2>
 			<input type="radio" id="question5answer1" name="question5">
   			<label for="question5answer1">CPU</label><br>
 			<input type="radio" id="question5answer2" name="question5">
@@ -73,9 +73,9 @@
   			<label for="question5answer3">Motherboard</label><br>
 			<input type="radio" id="question5answer4" name="question5">
   			<label for="question5answer4">Physical Drive</label><br>
-
-			<p id=feedback></p>
-
+			<br>
+			<b><p id=feedback></p></b>
+			<br>
 			<button onclick="process()">Check Answers</button>
 			<button onclick="reset()">Clear Answers</button>
 		</div>
