--- a/buyGuide/index.html
+++ b/buyGuide/index.html
@@ -24,7 +24,34 @@
 					</td>
 				</tr>
 			</table>
-			<p>lorem ipsum</p>
+			<h1>Imporant thing to note</h1>
+			<p>For the vast majority of computer users, you DO NOT need to build your own PC. If you do not feel comfortable dealing with computer parts, then just buy a pre-built computer, or even a laptop. While pre-built towers tend to be more expensive than just building it on your own, one can easily break components or get electrocuted by improperly building a PC. Custom-built PC sare also typically meant for those who need a very high performance computer with expensive parts.<br></p>
+			<table>
+				<colgroup>
+					<col width="40%" />
+					<col width="60%" />
+				</colgroup>
+				<tr>
+					<td><p>For Portability</p></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td><p>For The Artists</p></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td><p>"It Just Works"</p></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td><p>For The Gamers</p></td>
+					<td></td>
+				</tr>
+				<tr>
+					<td><p>For The IT Person</p></td>
+					<td></td>
+				</tr>
+			</table>
 		</div>
 		<p></p>
 		<div class = "bottomBanner">
